# DNS_Relay

./: CMakeLists.txt  README.md  cache.c  cache.h  cmuClient.c  cmuServer.c  dnsClient.c  dnsClient.h  dnsRelay.c  dnsResolver.c  dnsResolver.h  dnsServer.c  dnsServer.h  dnsStructure.h  global.h  linklist.c  linklist.h  table.c  table.h  test.c  trie.c  trie.h  udpClient.c  udpServer.c
